chore: add main.js

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Spelling Checker (RU)",
 	"version": "0.0.1",
 	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin checks russian spelling",
+	"description": "This is a sample plugin for Obsidian. This plugin checks Russian spelling",
 	"author": "Vseslav Dorofeev",
 	"authorUrl": "https://github.com/vdor",
 	"isDesktopOnly": false
