--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-spelling-check-ru",
   "version": "0.0.1",
-  "description": "This is a sample plugin for  Obsidian (https://obsidian.md/). This plugin checks russian spelling",
+  "description": "This is a sample plugin for  Obsidian (https://obsidian.md/). This plugin checks Russian spelling",
   "main": "src/main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
